# rust-queries-builder

./: .gitignore  ADVANCED_LOCK_SQL_SUMMARY.md  AGGREGATORS_UPDATE_v1.0.1.md  ANSWER.md  ARC_RWLOCK_PATTERN.md  BUILD_OPTIMIZATION.md  BUILD_OPTIMIZATION_SUMMARY.md  CHANGELOG.md  CONTAINER_SUPPORT.md  Cargo.toml  DATETIME_COMPLETE_SUMMARY.md  DATETIME_FEATURE_SUMMARY.md  DATETIME_GUIDE.md  DATETIME_SQL_COMPARISON_SUMMARY.md  EXTENSION_TRAIT_GUIDE.md  FINAL_SUMMARY.md  I64_TIMESTAMP_AGGREGATORS_SUMMARY.md  INDIVIDUAL_CRATES_GUIDE.md  ISSUE_RESOLVED.md  JOINS_AND_VIEWS_GUIDE.md  KEYPATH_MACRO_UPDATE_SUMMARY.md  LARGE_DATASET_BENCHMARK_SUMMARY.md  LAZY_AGGREGATORS_SUMMARY.md  LAZY_DATETIME_HELPERS_SUMMARY.md  LAZY_DATETIME_SUMMARY.md  LAZY_EVALUATION.md  LAZY_EVALUATION_COMPLETE_GUIDE.md  LAZY_SUMMARY.md  LOCK_AWARE_QUERYING_GUIDE.md  LOCK_AWARE_SUMMARY.md  LOCK_EXTENSIONS_SUMMARY.md  LOCK_TYPES_COMPLETE_GUIDE.md  MACRO_GUIDE.md  MEMORY_SAFETY.md  OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  PARKING_LOT_EXTENSION_SUMMARY.md  PARKING_LOT_SUPPORT_GUIDE.md  POC_TEMPLATE.md  PROJECT_SUMMARY.md  (+21 more)
examples/: advanced_lock_sql.rs  advanced_query_builder.rs  arc_rwlock_hashmap.rs  complete_api_showcase.rs  comprehensive_i64_aggregators.rs  container_support.rs  custom_queryable.rs  datetime_helper_functions.rs  datetime_operations.rs  derive_and_ext.rs  doc_examples.rs  i64_timestamp_aggregators.rs  individual_crates.rs  join_query_builder.rs  lazy_aggregators_demo.rs  lazy_datetime_helpers.rs  lazy_datetime_operations.rs  lazy_evaluation.rs  lazy_parallel_performance_comparison.rs  lazy_parallel_query_demo.rs  local_datetime_utc_epoch.rs  lock_aware_queries.rs  lock_extensions_demo.rs  lock_lazy_complete.rs  macro_helpers.rs  memory_safety_verification.rs  nested_arc_rwlock_hashmap.rs  parallel_queries_demo.rs  parking_lot_support.rs  queryable_comprehensive.rs  sql_comparison.rs  sql_like_lock_queries.rs  sql_verification.rs  tokio_rwlock_support.rs  without_clone.rs
rust-queries-core/: Cargo.toml
rust-queries-core/src/: datetime.rs  ext.rs  join.rs  lazy.rs  lazy_clean.rs  lazy_old.rs  lazy_parallel.rs  lib.rs  lock_ext.rs  lock_join.rs  lock_lazy.rs  lock_query.rs  lock_view.rs  locks.rs  macros.rs  query.rs  queryable.rs
rust-queries-derive/: Cargo.toml
rust-queries-derive/src/: lib.rs
src/: ext.rs  join.rs  lib.rs  query.rs
