[package]
name = "rust-queries-builder"
version = "0.3.0"
edition = "2021"
authors = ["codefonsi<codefonsi@gmail.com>"]
description = "A powerful, type-safe query builder library for Rust that leverages key-paths for SQL-like operations on in-memory collections"
license = "MIT OR Apache-2.0"
repository = "https://github.com/codefonsi/rust-queries-builder"
keywords = ["query", "builder", "database", "sql", "keypaths"]
categories = ["database", "data-structures"]

[dependencies]
key-paths-core = "1.0.1"
key-paths-derive = "0.5.0"

[features]
default = []

[dev-dependencies]
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"

[lib]
name = "rust_queries_builder"
path = "src/lib.rs"

[[example]]
name = "advanced_query_builder"
path = "examples/advanced_query_builder.rs"

[[example]]
name = "join_query_builder"
path = "examples/join_query_builder.rs"

[[example]]
name = "sql_comparison"
path = "examples/sql_comparison.rs"

[[example]]
name = "sql_verification"
path = "examples/sql_verification.rs"

[[example]]
name = "doc_examples"
path = "examples/doc_examples.rs"

[[example]]
name = "without_clone"
path = "examples/without_clone.rs"

[[example]]
name = "memory_safety_verification"
path = "examples/memory_safety_verification.rs"

