[package]
name = "rust-queries-builder"
version = "1.0.5"
edition = "2021"
authors = ["codefonsi<codefonsi@gmail.com>"]
description = "A powerful, type-safe query builder library for Rust that leverages key-paths for SQL-like operations on in-memory collections"
license = "MIT OR Apache-2.0"
repository = "https://github.com/codefonsi/rust-queries-builder"
keywords = ["query", "builder", "database", "sql", "keypaths"]
categories = ["database", "data-structures"]

[dependencies]
rust-queries-core = { path = "rust-queries-core", version = "1.0.5" }
rust-queries-derive = { path = "rust-queries-derive", version = "1.0.5" }

# Re-exported for convenience
tagged-core = "0.7.0"
key-paths-core = { version = "1.0.8", features = ["tagged_core"]}
key-paths-derive = "1.0.2"
chrono = { version = "0.4", optional = true }

[features]
default = []
datetime = ["rust-queries-core/datetime", "chrono"]
parking_lot = ["rust-queries-core/parking_lot"]
tokio = ["rust-queries-core/tokio"]

[dev-dependencies]
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
parking_lot = "0.12"

[lib]
name = "rust_queries_builder"
path = "src/lib.rs"

[[example]]
name = "advanced_query_builder"
path = "examples/advanced_query_builder.rs"

[[example]]
name = "join_query_builder"
path = "examples/join_query_builder.rs"

[[example]]
name = "sql_comparison"
path = "examples/sql_comparison.rs"

[[example]]
name = "sql_verification"
path = "examples/sql_verification.rs"

[[example]]
name = "doc_examples"
path = "examples/doc_examples.rs"

[[example]]
name = "without_clone"
path = "examples/without_clone.rs"

[[example]]
name = "memory_safety_verification"
path = "examples/memory_safety_verification.rs"

[[example]]
name = "lazy_evaluation"
path = "examples/lazy_evaluation.rs"

[[example]]
name = "container_support"
path = "examples/container_support.rs"

[[example]]
name = "custom_queryable"
path = "examples/custom_queryable.rs"

[[example]]
name = "arc_rwlock_hashmap"
path = "examples/arc_rwlock_hashmap.rs"

[[example]]
name = "macro_helpers"
path = "examples/macro_helpers.rs"

[[example]]
name = "derive_and_ext"
path = "examples/derive_and_ext.rs"

[[example]]
name = "individual_crates"
path = "examples/individual_crates.rs"

[[example]]
name = "datetime_operations"
path = "examples/datetime_operations.rs"

[[example]]
name = "lazy_datetime_operations"
path = "examples/lazy_datetime_operations.rs"

[[example]]
name = "datetime_helper_functions"
path = "examples/datetime_helper_functions.rs"

[[example]]
name = "lazy_datetime_helpers"
path = "examples/lazy_datetime_helpers.rs"

[[example]]
name = "lock_aware_queries"
path = "examples/lock_aware_queries.rs"

[[example]]
name = "sql_like_lock_queries"
path = "examples/sql_like_lock_queries.rs"

[[example]]
name = "advanced_lock_sql"
path = "examples/advanced_lock_sql.rs"

[[example]]
name = "tokio_rwlock_support"
path = "examples/tokio_rwlock_support.rs"

[[example]]
name = "lock_extensions_demo"
path = "examples/lock_extensions_demo.rs"

[[example]]
name = "parking_lot_support"
path = "examples/parking_lot_support.rs"

[[example]]
name = "lazy_aggregators_demo"
path = "examples/lazy_aggregators_demo.rs"

[[example]]
name = "keypath_showcase"
path = "examples/keypath_showcase.rs"

