[package]
name = "rust-queries-core"
version = "0.5.0"
edition = "2021"
authors = ["codefonsi<codefonsi@gmail.com>"]
description = "Core functionality for rust-queries-builder - type-safe query builder for Rust collections"
license = "MIT OR Apache-2.0"
repository = "https://github.com/codefonsi/rust-queries-builder"
keywords = ["query", "builder", "database", "sql", "keypaths"]
categories = ["database", "data-structures"]

[dependencies]
key-paths-core = "1.0.1"
key-paths-derive = "0.5.0"

[dev-dependencies]

[lib]
name = "rust_queries_core"
path = "src/lib.rs"
