[package]
name = "rust-queries-core"
version = "1.0.0"
edition = "2021"
authors = ["codefonsi<codefonsi@gmail.com>"]
description = "Core functionality for rust-queries-builder - type-safe query builder for Rust collections"
license = "MIT OR Apache-2.0"
repository = "https://github.com/codefonsi/rust-queries-builder"
keywords = ["query", "builder", "database", "sql", "keypaths"]
categories = ["database", "data-structures"]

[dependencies]
key-paths-core = "1.0.1"
key-paths-derive = "0.5.0"
chrono = { version = "0.4", optional = true }
parking_lot = { version = "0.12", optional = true }
tokio = { version = "1.35", features = ["sync"], optional = true }

[features]
default = []
datetime = ["chrono"]
parking_lot = ["dep:parking_lot"]
tokio = ["dep:tokio"]

[dev-dependencies]
chrono = "0.4"

[lib]
name = "rust_queries_core"
path = "src/lib.rs"
