[package]
name = "rust-queries-derive"
version = "1.0.7"
edition = "2021"
authors = ["codefonsi<codefonsi@gmail.com>"]
description = "Derive macros for rust-queries-builder"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
